--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -156,7 +156,23 @@ Elia Scandaletti & Verificatore & 3 & TBD & TBD \\\hline
 \paragraph{Presentazione Proof of Concept}
 Inizio: 01/01/2021\par
 Fine prevista: 10/02/2022\par
-Fine effettiva: TBD
+Fine effettiva: 09/02/2022
+
+Ore richieste:\\[0.5em]
+\begin{tabular}{|l|l|l||l|l|l|l|}\hline
+Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
+Responsabile & 2 & 2.5 & 30\euro & 60\euro & 75\euro \\\hline
+Verificatore & 0.5 & 0.5 & 15\euro & 7.50\euro & 7.50\euro \\\hline
+Totale ore: & 2.5 & 3 & Totale costi: & 67.50\euro & 82.50\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & +0.5 & \multicolumn{2}{r|}{Differenza di costo:} & +15\euro \\\hline
+\end{tabular}
+
+Ruoli assegnati:\\[0.5em]
+\begin{tabular}{|l|l|l|l|l|}\hline
+Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
+Matteo Galvagni & Responsabile & 2 & 2.5 & +0.5 \\\hline
+Giovanni Cocco & Verificatore & 0.5 & 0.5 & 0 \\\hline
+\end{tabular}
 
 \paragraph{Grafico di Gannt}
 Il grafico di Gannt può essere consultato al \underline{\href{https://docs.google.com/spreadsheets/d/e/2PACX-1vRd4970Fob6KlNwY1iV6bnHZXNl41F74utFkkc9ykuT1NUEGLnFcCd4rOHbXjW99ichDnkV3cEGCmWi/pubhtml?gid=1972921762}{seguente indirizzo}}.
