--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -134,23 +134,23 @@ Giovanni Cocco & Verificatore & 3 & 0.5 & -2.5 \\\hline
 \paragraph{Sviluppo Proof of Concept}
 Inizio: 23/12/2021\par
 Fine prevista: 08/02/2022\par
-Fine effettiva: TBD
+Fine effettiva: 07/02/2022
 
 Ore richieste:\\[0.5em]
 \begin{tabular}{|l|l|l||l|l|l|l|}\hline
 Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Programmatore & 40 & TBD & 15\euro & 600\euro & TBD \\\hline
-Verificatore & 3 & TBD & 15\euro & 45\euro & TBD \\\hline
-Totale ore: & 43 & TBD & Totale costi: & 645\euro & TBD \\\hline
-\multicolumn{2}{|r|}{Differenza di ore:} & TBD & \multicolumn{2}{r|}{Differenza di costo:} & TBD \\\hline
+Programmatore & 40 & 44 & 15\euro & 600\euro & 660\euro \\\hline
+Verificatore & 3 & 4 & 15\euro & 45\euro & 60\euro \\\hline
+Totale ore: & 43 & 48 & Totale costi: & 645\euro & 720\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & +5 & \multicolumn{2}{r|}{Differenza di costo:} & +75\euro \\\hline
 \end{tabular}
 
 Ruoli assegnati:\\[0.5em]
 \begin{tabular}{|l|l|l|l|l|}\hline
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Giovanni Cocco & Programmatore & 20 & TBD & TBD \\\hline
-Matteo Galvagni & Programmatore & 20 & TBD & TBD \\\hline
-Elia Scandaletti & Verificatore & 3 & TBD & TBD \\\hline
+Giovanni Cocco & Programmatore & 20 & 21 & +1 \\\hline
+Matteo Galvagni & Programmatore & 20 & 23 & +3 \\\hline
+Elia Scandaletti & Verificatore & 3 & 4 & +1 \\\hline
 \end{tabular}
 
 \paragraph{Presentazione Proof of Concept}
