--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -331,7 +331,7 @@ L'acquirente usando Metamask, si connette con il proprio wallet.
 \includegraphics[width=0.9\textwidth]{UC_controlli}
 
 \paragraph{UCa Controllo connessione}\\
-\textbf{Attori primari}: Venditore con wallet connesso, Acquirente con wallet connesso. \\
+\textbf{Attori primari}: Venditore con wallet connesso, acquirente con wallet connesso. \\
 \textbf{Precondizioni}: Il sistema vuole interagire con la blockchain.\\
 \textbf{Postcondizioni}:  Il sistema può interagire con la blockchain senza problemi.\\
 \textbf{Scenario principale}:
