--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -12,27 +12,22 @@
 \settitolo{Analisi dei requisiti}
 \setprogetto{ShopChain}
 \setcommittenti{SyncLab}
-\setredattori{Alberto Nicoletti, Andrea Volpe, Giovanni Cocco}
+\setredattori{Alberto Nicoletti\\Andrea Volpe}
+\setrevisori{Giovanni Cocco}
+\setresponsabili{Elia Scandaletti}
 \setdestuso{esterno}
 \setdescrizione{
 Analisi dei requisiti del progetto ShopChain con casi d'uso e requisiti.
 }
 
-\addversione{0.0.0}{11/12/2021}{Alberto Nicoletti}{Redazione}{Struttura del documento, stesura sezioni 1 e 2}
-\addversione{0.0.1}{30/12/2021}{Alberto Nicoletti}{Redazione}{Stesura casi d'uso da UC1 a UC5.4}
-\addversione{0.0.2}{03/01/2022}{Andrea Volpe}{Redazione}{Stesura casi d'uso da UC6 a UC20}
-\addversione{0.0.3}{03/01/2022}{Alberto Nicoletti}{Redazione}{Aggiunta immagini}
-\addversione{0.0.4}{12/01/2022}{Andrea Volpe}{Redazione}{Modifica casi d'uso}
-\addversione{0.0.5}{16/01/2022}{Alberto Nicoletti}{Redazione}{Stesura primi requisiti}
-\addversione{0.0.6}{18/01/2022}{Andrea Volpe}{Redazione}{Stesura requisiti acquirente}
-\addversione{0.0.7}{21/01/2022}{Alberto Nicoletti}{Redazione e correzione}{Riorganizzazione requisiti, aggiunta requisiti di vincolo e di qualità}
-\addversione{0.0.8}{28/01/2022}{Andrea Volpe}{Correzione}{Correzione UC19 estensioni}
-\addversione{0.0.9}{1/02/2022}{Alberto Nicoletti}{Correzione}{Correzione immagini casi d'uso e requisiti}
-\addversione{0.0.10}{03/02/2022}{Andrea Volpe}{Redazione e correzione}{Stesura RNO29 e correzione errori grammaticali}
-\addversione{0.0.11}{04/02/2022}{Giovanni Cocco}{Correzione}{Correzioni varie}
-\addversione{0.0.12}{05/02/2022}{Alberto Nicoletti}{Riscrittura}{Riscrittura di alcuni casi d'uso a seguito di una discussione interna al gruppo}
-\addversione{0.0.13}{06/02/2022}{Alberto Nicoletti}{Stesura e correzioni}{Stesura UC12 e UC13, correzioni varie}
-\addversione{0.0.14}{07/02/2022}{Andrea Volpe}{Stesura e correzioni}{Modificato quasi tutti i requisiti e correzioni varie, in base all'incontro del verbale 2022 02 04 I}
+\addversione{0.0.0}{11/12/2021}{Alberto Nicoletti}{Redazione}{Strutturazione del documento}
+\addversione{0.0.1}{03/01/2021}{Andrea Volpe}{Redazione}{Stesura casi d'uso}
+\addversione{0.0.2}{21/01/2022}{Alberto Nicoletti}{Redazione}{Stesura requisiti}
+\addversione{0.0.3}{21/01/2022}{Andrea Volpe}{Redazione}{Riorganizzazione requisiti}
+\addversione{0.1.0}{04/02/2022}{Giovanni Cocco}{Revisione}{Correzioni varie}
+\addversione{0.1.1}{05/02/2022}{Alberto Nicoletti}{Redazione}{Adeguamento casi d'uso a tecnologie scelte}
+\addversione{0.1.2}{07/02/2022}{Andrea Volpe}{Redazione}{Modifica dei requisiti come concordato nell'incontro del 04/02/2022}
+\addversione{1.0.0}{09/02/2022}{Elia Scandaletti}{Approvazione}{Approvazione per RTB}
 
 \begin{document}
 
