Manca elenco versioni

--- a/docs/esterni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
+++ b/docs/esterni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
@@ -10,14 +10,19 @@
 
 \settitolo{Analisi delle tecnologie}
 \setredattori{Federico Marchi \\ Matteo Galvagni}
+\setrevisori{Giovanni Cocco}
 \setdestuso{Esterno}
 \setdescrizione{
 Analisi delle tecnologie.
 }
 
+\addversione{0.0.0}{data}{chi}{Redazione}{descrizione}
+
 \begin{document}
 
 \makefrontpage
+
+\makeversioni
 
 \section{Analisi delle Blockchain}
 
